index con marquee listo + pagina editorial arreglado

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Mag Lennon Photography</title>
 </head>
 <body>
+  <div class="imgIndex">
     <!-- HEADER: LOGO AND NAV BAR-->
     <div class="container-fluid p-0">
         <div class="row m-0">
@@ -60,15 +61,13 @@
         </div>
     </div>
     <!-- END HEADER AND NAV BAR -->
-<main>
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12 col-xs-12 p-0">
-          
-      </div>
-    </div>
-</div>
-</main>
+    <main>
+      <marquee behavior="" direction="right">
+        <a href="./pages/connect.html">LET'S CONNECT</a>
+      </marquee>
+    </main>
+  </div>
+
 <!-- FOOTER START-->
 <footer>
     <div class="container-fluid">
