--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -72,7 +72,6 @@
               <button type="button" data-bs-target="#carousel01" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carousel01" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carousel01" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carousel01" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner h-100">
               <div class="carousel-item active">
@@ -84,11 +83,6 @@
               <div class="carousel-item">
                 <img src="../assets/pub0103.jpg" class="d-block w-100 pubImg" alt="ginger woman posing with rings and red flowers">
               </div>
-              <div class="carousel-item ediText">
-                <h1>Heirloom Harvest</h1>
-                <p>the process or period of gath ering crops the process or period of gath ering crops the process or period of gath ering crops</p>
-                <a href="https://www.behance.net/gallery/158633663/Heirloom-Harvest" target="_blank">See more...</a>
-              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel01" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -99,6 +93,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <a href="https://www.behance.net/gallery/158633663/Heirloom-Harvest" target="_blank">HEIRLOOM HARVEST</a>
         </div>
         <!-- CAROUSEL 02 -->
         <div class="col-lg-4 col-xs-11 pub pub02 p-0">
@@ -107,7 +102,6 @@
               <button type="button" data-bs-target="#carousel02" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carousel02" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carousel02" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carousel01" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner h-100">
               <div class="carousel-item active">
@@ -119,11 +113,6 @@
               <div class="carousel-item">
                 <img src="../assets/pub0203.jpg" class="d-block w-100 pubImg" alt="portrait of boy with rocks from beach">
               </div>
-              <div class="carousel-item ediText">
-                <h1>An Ode to Rural Planets</h1>
-                <p>this story was dedicated to the allure and mystery found in a homestead</p>
-                <a href="https://lulamag.jp/encounter/fashion/meghan-mathews/magdalena-lennon/2023">See more...</a>
-              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel02" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -134,6 +123,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <a href="https://lulamag.jp/encounter/fashion/meghan-mathews/magdalena-lennon/2023">AN ODE TO RURAL PLANETS</a>
         </div>
         <!-- CAROUSEL 03 -->
         <div class="col-lg-4 col-xs-11 pub pub03 p-0">
@@ -142,7 +132,6 @@
               <button type="button" data-bs-target="#carousel03" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carousel03" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carousel03" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carousel01" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner h-100">
               <div class="carousel-item active">
@@ -154,11 +143,6 @@
               <div class="carousel-item">
                 <img src="../assets/pub0303.jpg" class="d-block w-100 pubImg" alt="woman looking to the camera through flowers">
               </div>
-              <div class="carousel-item ediText">
-                <h1>OMEN & OUTLIER</h1>
-                <p>in a coastal pueblo, I dwell as a vessel in between worlds. Whispers of spirits caress my ears, their presence felt deeply</p>
-                <a href="https://modernroad.com/blogs/editorials/omen-outlier?_pos=1&_sid=8a131c061&_ss=r">See more...</a>
-              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel03" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -169,6 +153,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <a href="https://modernroad.com/blogs/editorials/omen-outlier?_pos=1&_sid=8a131c061&_ss=r">OMEN & OUTLIER</a>
         </div>
       </div>
   </div>
