ventanas modales agregadas a la página shootings

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <!-- END HEADER AND NAV BAR -->
     <main>
-      <marquee behavior="" direction="right">
+      <marquee behavior="" scrollamount="15" direction="right">
         <a href="./pages/connect.html">LET'S CONNECT</a>
       </marquee>
     </main>
