--- a/pages/shootings.html
+++ b/pages/shootings.html
@@ -67,18 +67,130 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12 grid">
               <div class="grid-item item01">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn01" data-bs-toggle="modal" data-bs-target="#modal01">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-l modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot04.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item02">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn02" data-bs-toggle="modal" data-bs-target="#modal02">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot03.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item03">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn03" data-bs-toggle="modal" data-bs-target="#modal03">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-l modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot07.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item04">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn04" data-bs-toggle="modal" data-bs-target="#modal04">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-l modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot01.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item05">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn05" data-bs-toggle="modal" data-bs-target="#modal05">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-l modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot08.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item06">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn06" data-bs-toggle="modal" data-bs-target="#modal06">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot02.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-item item07">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary w-100 h-100 btn07" data-bs-toggle="modal" data-bs-target="#modal07">
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="modal07" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-xl modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="../assets/shoot06.jpg" alt="" class="gridImg">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
         </div>
