optimización imágenes shootings, ajuste de links en editorial

--- a/pages/editorial.html
+++ b/pages/editorial.html
@@ -123,7 +123,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <a href="https://lulamag.jp/encounter/fashion/meghan-mathews/magdalena-lennon/2023">AN ODE TO RURAL PLANETS</a>
+          <a href="https://lulamag.jp/encounter/fashion/meghan-mathews/magdalena-lennon/2023" target="_blank">AN ODE TO RURAL PLANETS</a>
         </div>
         <!-- CAROUSEL 03 -->
         <div class="col-lg-4 col-xs-11 pub pub03 p-0">
@@ -153,7 +153,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <a href="https://modernroad.com/blogs/editorials/omen-outlier?_pos=1&_sid=8a131c061&_ss=r">OMEN & OUTLIER</a>
+          <a href="https://modernroad.com/blogs/editorials/omen-outlier?_pos=1&_sid=8a131c061&_ss=r" target="_blank">OMEN & OUTLIER</a>
         </div>
       </div>
   </div>
